# gweather-locations

./: NEWS  README.md  meson.build
data/: Locations.xml  meson.build
po/: LINGUAS  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eu.po  fa.po  fr.po  gl.po  he.po  hu.po  is.po  it.po  ka.po  kk.po  kw.po  lo.po  lt.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  th.po  tr.po  ug.po  uk.po  zh_CN.po
